--- a/index.html
+++ b/index.html
@@ -111,13 +111,14 @@
         <div class="cover-small-left">
           <a href="https://aj300542.github.io/future/">
             <img src="img/luohan.png" alt="..."></a>
-          <div class="hover-text">过去<br>PAST<br>开发中</div>
+          <div class="hover-text">过去<br>PAST</div>
         </div>
         <div class="cover-small-right">
           <a href="https://aj300542.github.io/future/">
             <img src="img/tiger2.png" alt="..."></a>
           <div class="hover-text">未来<br>FUTURE</div>
         </div>
+
         <div class="container text-center text-white">
           <p class="font-italic lead">Hi, how are you doing</p>
           <h1 class="text-uppercase my-4">My name is aj300</h1>
@@ -190,8 +191,18 @@
             <a href="https://aj300542.github.io/music/" class="d-block mb-1">
               <img src="img/mm_facetoface_collect_qrcode_1711603406115.png" alt="..."></a>
           </div>
-
-          <p class="font-italic lead">I truly appreciate your help</p>
+          <p class="font-italic lead">
+            <a href="download.html" style="
+                  text-decoration: none;
+                  font-weight: bold;
+                  background: linear-gradient(to right, #ff6600, #ffcc00);
+                  -webkit-background-clip: text;
+                  -webkit-text-fill-color: transparent;
+                  font-family: 'SimHei', 'Microsoft YaHei', sans-serif;
+                ">
+              源代码下载超链接
+            </a>
+          </p>
           <p class="font-italic lead">我是那只牛那只马，给你写代码，喜欢不要忘记给我一点点支持</p>
 
           <p class="font-italic lead"></p>你的支持是我前进的动力，谢谢支持</p>
