--- a/download.html
+++ b/download.html
@@ -182,7 +182,7 @@
               <a href="img/ping-main.zip">
                 <img src="img/p1_ping.jpg" style="width: 30vh;" alt="点击下载" />
               </a>
-              <div class="hover-text">三傻<br>电子书</div>
+              <div class="hover-text">就支持一下<br>一下下嘛</div>
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
               <a>
