--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
           </div>
 
           <div class="img-container">
-            <a href="https://aj300542.github.io/time/" class="d-block mb-1">
-              <img src="img/p2_time.jpg" alt="..."></a>
-            <div class="hover-text">卡顿像素时钟</div>
+            <a href="https://aj300542.github.io/led/" class="d-block mb-1">
+              <img src="img/p1_typing.jpg" alt="..."></a>
+            <div class="hover-text">萝卜时钟打字机</div>
           </div>
 
           <div class="img-container" style="width: 20vh; opacity: 0.75;">
