--- a/download.html
+++ b/download.html
@@ -173,14 +173,34 @@
               </a>
               <div class="hover-text">芸芸众生<br>源代码下载</div>
             </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+              <a href="img/ping-main.zip">
+                <img src="img/p1_ping.jpg" style="width: 30vh;" alt="点击下载" />
+              </a>
+              <div class="hover-text">就支持一下<br>一下下嘛</div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+              <a href="img/led-main.zip">
+                <img src="img/p1_typing.jpg" style="width: 30vh;" alt="点击下载" />
+              </a>
+              <div class="hover-text">像素萝卜时钟<br>求支持</div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
+              <a href="img/time-main.zip">
+                <img src="img/p2_time.jpg" style="width: 30vh;" alt="点击下载" />
+              </a>
+              <div class="hover-text">就支持一下<br>一下下嘛</div>
+            </div>
             <div class="col-lg-4 col-md-6 mb-4">
               <a>
                 <img src="img/1711604188130.jpg" style="height: 30vh;" alt="点击下载" />
               </a>
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
-              <a href="img/ping-main.zip">
-                <img src="img/p1_ping.jpg" style="width: 30vh;" alt="点击下载" />
+              <a href="img/ds2-main.zip">
+                <img src="img/p3-ds2.jpg" style="width: 30vh;" alt="点击下载" />
               </a>
               <div class="hover-text">就支持一下<br>一下下嘛</div>
             </div>
