--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     .img-container {
       position: relative;
       display: inline-block;
+      overflow: hidden;
     }
 
     .hover-text {
@@ -187,7 +188,7 @@
             <div class="hover-text">萝卜时钟打字机</div>
           </div>
 
-          <div class="img-container" style="width: 20vh; opacity: 0.75;">
+          <div class="img-container" style="width: 15vh; opacity: 0.75; border-radius: 50%; ">
             <a href="https://aj300542.github.io/music/" class="d-block mb-1">
               <img src="img/mm_facetoface_collect_qrcode_1711603406115.png" alt="..."></a>
           </div>
