--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
         <div class="cover-small-left">
           <a href="https://aj300542.github.io/past/">
             <img src="img/luohan.png" alt="..."></a>
-          <div class="hover-text">过去<br>PAST</div>
+          <div class="hover-text">纪念日<br>PAST</div>
         </div>
         <div class="cover-small-right">
           <a href="https://aj300542.github.io/future/">
             <img src="img/tiger2.png" alt="..."></a>
-          <div class="hover-text">未来<br>FUTURE</div>
+          <div class="hover-text">倒计时<br>FUTURE</div>
         </div>
 
         <div class="container text-center text-white">
