--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
           </div>
 
           <div class="img-container">
-            <a href="https://aj300542.github.io/kobo/" class="d-block mb-1">
-              <img src="img/p1_kobo.jpg" alt="..."></a>
-            <div class="hover-text">经典数字液晶</div>
+            <a href="https://aj300542.github.io/emoji/" class="d-block mb-1">
+              <img src="img/emoji.jpg" alt="..."></a>
+            <div class="hover-text">emoji素材世界</div>
           </div>
           <div class="img-container">
             <a href="https://aj300542.github.io/cloud/" class="d-block mb-1">
