--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                   -webkit-text-fill-color: transparent;
                   font-family: 'SimHei', 'Microsoft YaHei', sans-serif;
                 ">
-              源代码下载超链接和捐赠页面
+              源代码下载超链接或捐赠页面
             </a>
           </p>
           <p class="font-italic lead">我是那只牛那只马，给你写代码，喜欢不要忘记给我一点点支持</p>
