--- a/download.html
+++ b/download.html
@@ -178,7 +178,7 @@
               <a href="img/ping-main.zip">
                 <img src="img/p1_ping.jpg" style="width: 30vh;" alt="点击下载" />
               </a>
-              <div class="hover-text">就支持一下<br>一下下嘛</div>
+              <div class="hover-text">乒乓球<br>三楼傻用户</div>
             </div>
 
             <div class="col-lg-4 col-md-6 mb-4">
@@ -191,7 +191,7 @@
               <a href="img/time-main.zip">
                 <img src="img/p2_time.jpg" style="width: 30vh;" alt="点击下载" />
               </a>
-              <div class="hover-text">就支持一下<br>一下下嘛</div>
+              <div class="hover-text">卡顿时钟<br>一毛也可以</div>
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
               <a>
@@ -202,7 +202,7 @@
               <a href="img/ds2-main.zip">
                 <img src="img/p3-ds2.jpg" style="width: 30vh;" alt="点击下载" />
               </a>
-              <div class="hover-text">就支持一下<br>一下下嘛</div>
+              <div class="hover-text">你的支持<br>是我最大的动力</div>
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
               <a>
