--- a/index.html
+++ b/index.html
@@ -193,6 +193,11 @@
               <img src="img/p1_hanshi.jpg" alt="..."></a>
             <div class="hover-text">书法寒食帖</div>
           </div>
+          <div class="img-container">
+            <a href="https://aj300542.github.io/cc/" class="d-block mb-1">
+              <img src="img/p3_cc.jpg" alt="..."></a>
+            <div class="hover-text">彩色书法纸条</div>
+          </div>
           <p class="font-italic lead">
             <a href="download.html" style="
                   text-decoration: none;
