--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="container text-center text-white">
           <p class="font-italic lead">Hi, how are you doing</p>
           <h1 class="text-uppercase my-4">My name is aj300</h1>
-          <p class="font-italic lead">推荐最右边的碎碎念，语音攻击txt</p>
+          <p class="font-italic lead">碎碎念，语音攻击txt</p>
 
           <div class="img-container">
             <a href="https://aj300542.github.io/music/" class="d-block mb-1">
