--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Screen - Multipurpose Template</title>
+  <title>aj300542网页集锦</title>
+  <script src="wakelock.js"></script>
+  <link rel="shortcut icon" href="good_128x128.ico">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="all,follow">
@@ -123,78 +125,93 @@
         <div class="container text-center text-white">
           <p class="font-italic lead">Hi, how are you doing</p>
           <h1 class="text-uppercase my-4">My name is aj300</h1>
-          <p class="font-italic lead">碎碎念，语音攻击txt</p>
+          <p class="font-italic lead">推荐最右边的碎碎念，语音攻击txt</p>
 
           <div class="img-container">
-            <a href="https://aj300542.github.io/music/" class="d-block mb-1">
+            <a href="https://aj300542.github.io/music/" class="d-block mb-1" target="_blank">
               <img src="img/p2_music.png" alt="..."></a>
             <div class="hover-text">随身听音乐复刻</div>
           </div>
 
           <div class="img-container">
-            <a href="https://aj300542.github.io/Clock/" class="d-block mb-1">
+            <a href="https://aj300542.github.io/Clock/" class="d-block mb-1" target="_blank">
               <img src="img/p1_clock.jpg" alt="..."></a>
             <div class="hover-text">辉光管IN-18</div>
           </div>
           <div class="img-container">
-            <a href="https://aj300542.github.io/nixietube/" class="d-block mb-1">
+            <a href="https://aj300542.github.io/nixietube/" class="d-block mb-1" target="_blank">
               <img src="img/p1_nixie.jpg" alt="..."></a>
             <div class="hover-text">复刻辉光管</div>
           </div>
           <div class="img-container">
-            <a href="https://aj300542.github.io/txt/" class="d-block mb-1">
+            <a href="https://aj300542.github.io/txt/" class="d-block mb-1" target="_blank">
               <img src="img/word.jpg" alt="...">
               <div class="hover-text">碎碎念</div>
             </a>
           </div>
           <p class="font-italic lead">这里有音乐有大海有星星有时空</p>
           <div class="img-container">
-            <a href="https://aj300542.github.io/ds2/" class="d-block mb-1">
+            <a href="https://aj300542.github.io/ds2/" class="d-block mb-1" target="_blank">
               <img src="img/p3-ds2.jpg" alt="...">
               <div class="hover-text">死亡搁浅2时钟</div>
             </a>
           </div>
 
           <div class="img-container">
-            <a href="https://aj300542.github.io/emoji/" class="d-block mb-1">
+            <a href="https://aj300542.github.io/emoji/" class="d-block mb-1" target="_blank">
               <img src="img/emoji.jpg" alt="..."></a>
             <div class="hover-text">emoji素材世界</div>
           </div>
           <div class="img-container">
-            <a href="https://aj300542.github.io/cloud/" class="d-block mb-1">
+            <a href="https://aj300542.github.io/cloud/" class="d-block mb-1" target="_blank">
               <img src="img/p2_cloud.jpg" alt="..."></a>
             <div class="hover-text">芸芸众生</div>
           </div>
           <div class="img-container">
-            <a href="https://aj300542.github.io/33/" class="d-block mb-1">
+            <a href="https://aj300542.github.io/33/" class="d-block mb-1" target="_blank">
               <img src="img/eskier.jpg" alt="...">
               <div class="hover-text">33号远征队</div>
             </a>
           </div>
           <div class="img-container">
-            <a href="https://aj300542.github.io/ping/" class="d-block mb-1">
+            <a href="https://aj300542.github.io/ping/" class="d-block mb-1" target="_blank">
               <img src="img/p1_ping.jpg" alt="..."></a>
             <div class="hover-text">乒乓球我打</div>
           </div>
           <div class="img-container">
-            <a href="https://aj300542.github.io/poem/" class="d-block mb-1">
+            <a href="https://aj300542.github.io/poem/" class="d-block mb-1" target="_blank">
               <img src="img/p1_POEM.jpg" alt="..."></a>
             <div class="hover-text">唐诗169首</div>
           </div>
 
           <div class="img-container">
-            <a href="https://aj300542.github.io/led/" class="d-block mb-1">
+            <a href="https://aj300542.github.io/led/" class="d-block mb-1" target="_blank">
               <img src="img/p1_typing.jpg" alt="..."></a>
             <div class="hover-text">萝卜时钟打字机</div>
           </div>
 
           <div class="img-container">
-            <a href="https://aj300542.github.io/hanshi/" class="d-block mb-1">
+            <a href="https://aj300542.github.io/hanshi/" class="d-block mb-1" target="_blank">
               <img src="img/p1_hanshi.jpg" alt="..."></a>
             <div class="hover-text">书法寒食帖</div>
           </div>
           <div class="img-container">
-            <a href="https://aj300542.github.io/cc/" class="d-block mb-1">
+            <a href="https://aj300542.github.io/kobo/" class="d-block mb-1" target="_blank">
+              <img src="img/p1_kobo.jpg" alt="..."></a>
+            <div class="hover-text">液晶显示时钟</div>
+          </div>
+          <div class="img-container">
+            <a href="https://aj300542.github.io/time/" class="d-block mb-1" target="_blank">
+              <img src="img/p2_time.jpg" alt="..."></a>
+            <div class="hover-text">卡顿时钟</div>
+          </div>
+          <div class="img-container">
+            <a href="https://aj300542.github.io/digital/" class="d-block mb-1" target="_blank">
+              <img src="img/p2_digital.jpg" alt="..."></a>
+            <div class="hover-text">烟花时钟</div>
+          </div>
+          <div class="img-container">
+            <a href="https://aj300542.github.io/cc/" class="d-block mb-1" target="_blank">
               <img src="img/p3_cc.jpg" alt="..."></a>
             <div class="hover-text">彩色书法纸条</div>
           </div>
