--- a/download.html
+++ b/download.html
@@ -72,7 +72,7 @@
     .cover-small-left,
     .cover-small-right {
       position: absolute;
-      top: 46vh;
+      top: 66vh;
       height: auto;
       display: flex;
       justify-content: center;
@@ -80,10 +80,11 @@
       margin: 0 auto;
       border-radius: 3vh;
       overflow: hidden;
+      z-index: 9;
     }
 
     .cover-small-left {
-      left: -15vh;
+      right: 5vh;
       width: 20vh;
     }
 
@@ -126,7 +127,11 @@
 
 <body>
   <div class="main">
-
+    <div class="cover-small-left">
+      <a href="https://aj300542.github.io">
+        <img src="img/luohan.png" alt="..."></a>
+      <div class="hover-text">返回主页<br>PAST</div>
+    </div>
     <section>
       <div class="d-flex h-100 align-items-center">
         <div class="container">
@@ -138,10 +143,20 @@
               <p>你的支持是我前进的动力，谢谢支持</p>
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
+              <a>
+                <img src="img/mm_facetoface_collect_qrcode_1711603406115.png" style="height: 30vh;" alt="点击下载" />
+              </a>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
               <a href="img/poem-main.zip">
                 <img src="img/p1_POEM.jpg" style="width: 30vh;" alt="点击下载" />
               </a>
               <div class="hover-text">唐诗<br>169首</div>
+            </div>
+                        <div class="col-lg-4 col-md-6 mb-4">
+              <a>
+                <img src="img/1711604188130.jpg" style="height: 30vh;" alt="点击下载" />
+              </a>
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
               <a href="img/Clock-main.zip">
@@ -178,7 +193,7 @@
               <a href="img/ping-main.zip">
                 <img src="img/p1_ping.jpg" style="width: 30vh;" alt="点击下载" />
               </a>
-              <div class="hover-text">乒乓球<br>三楼傻用户</div>
+              <div class="hover-text">就支持一下<br>一下下嘛</div>
             </div>
 
             <div class="col-lg-4 col-md-6 mb-4">
@@ -191,24 +206,16 @@
               <a href="img/time-main.zip">
                 <img src="img/p2_time.jpg" style="width: 30vh;" alt="点击下载" />
               </a>
-              <div class="hover-text">卡顿时钟<br>一毛也可以</div>
+              <div class="hover-text">就支持一下<br>一下下嘛</div>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-              <a>
-                <img src="img/1711604188130.jpg" style="height: 30vh;" alt="点击下载" />
-              </a>
-            </div>
+
             <div class="col-lg-4 col-md-6 mb-4">
               <a href="img/ds2-main.zip">
                 <img src="img/p3-ds2.jpg" style="width: 30vh;" alt="点击下载" />
               </a>
-              <div class="hover-text">你的支持<br>是我最大的动力</div>
+              <div class="hover-text">就支持一下<br>一下下嘛</div>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-              <a>
-                <img src="img/mm_facetoface_collect_qrcode_1711603406115.png" style="height: 30vh;" alt="点击下载" />
-              </a>
-            </div>
+
 
           </div>
         </div>
