--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
             <div class="hover-text">书法寒食帖</div>
           </div>
           <div class="img-container">
-            <a href="https://aj300542.github.io/kobo/" class="d-block mb-1" target="_blank">
-              <img src="img/p1_kobo.jpg" alt="..."></a>
-            <div class="hover-text">液晶显示时钟</div>
+            <a href="https://aj300542.github.io/hr/" class="d-block mb-1" target="_blank">
+              <img src="img/p3_card.jpg" alt="..."></a>
+            <div class="hover-text">彩色工牌</div>
           </div>
           <div class="img-container">
             <a href="https://aj300542.github.io/time/" class="d-block mb-1" target="_blank">
