--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <div class="img-container">
             <a href="https://aj300542.github.io/hr/" class="d-block mb-1" target="_blank">
               <img src="img/p3_card.jpg" alt="..."></a>
-            <div class="hover-text">彩色工牌</div>
+            <div class="hover-text">会动的彩色工牌</div>
           </div>
           <div class="img-container">
             <a href="https://aj300542.github.io/time/" class="d-block mb-1" target="_blank">
