--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       </div>
       <div class="scroll-btn link-scroll"><i class="fas fa-angle-double-down"></i></div>
     </section>
-    <section id="1">
+     <!-- <section id="1">
       <div class="d-flex h-100 align-items-center">
         <div class="container">
           <div class="row align-items-center">
@@ -327,7 +327,7 @@
         </div>
       </div>
     </section>
-  </div>
+  </div>-->
   <!-- JavaScript files-->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
