--- a/index.html
+++ b/index.html
@@ -215,6 +215,11 @@
               <img src="img/p3_cc.jpg" alt="..."></a>
             <div class="hover-text">彩色书法纸条</div>
           </div>
+          <div class="img-container">
+            <a href="https://aj300542.github.io/ss/" class="d-block mb-1" target="_blank">
+              <img src="img/p2_ss.jpg" alt="..."></a>
+            <div class="hover-text">空洞骑士：丝之歌</div>
+          </div>
           <p class="font-italic lead">
             <a href="download.html" style="
                   text-decoration: none;
