--- a/download.html
+++ b/download.html
@@ -216,6 +216,12 @@
               <div class="hover-text">就支持一下<br>一下下嘛</div>
             </div>
 
+            <div class="col-lg-4 col-md-6 mb-4">
+              <a href="https://github.com/aj300542/ss/archive/refs/heads/main.zip">
+                <img src="img/p2_ss.jpg" style="width: 30vh;" alt="点击下载" />
+              </a>
+              <div class="hover-text">空洞骑士<br>丝之歌</div>
+            </div>
 
           </div>
         </div>
