--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                   -webkit-background-clip: text;
                   -webkit-text-fill-color: transparent;
                   font-family: 'SimHei', 'Microsoft YaHei', sans-serif;
-                ">
+                "  target="_blank">
               源代码下载超链接或捐赠页面
             </a>
           </p>
